...
        setupUI()
        fetchStocks()
        tableView.reloadData()
    }
    
    func setupUI() {
        navigationItem.title = "Stock Quotes"
        view.backgroundColor = .darkBlue
        tableView.tableFooterView = UIView()
        tableView.separatorColor = .white
        
        navigationItem.rightBarButtonItem = UIBarButtonItem(title: "Refresh", style: .plain, target: self, action: #selector(handleRefresh))
    }
    
    override func viewWillTransition(to size: CGSize, with coordinator: UIViewControllerTransitionCoordinator) {
        
        if DeviceType().isPad() {
            print("iPad")
...
