//
//  ChosenStocks.swift
//  Stox
//
//  Created by Puroof on 4/29/18.
//  Copyright © 2018 Lithogen. All rights reserved.
//

import Foundation


struct ChosenStocks {
    
    let symbols = ["INTC", "AAPL", "FB", "EBAY", "AMZN", "NFLX", "TSLA", "NVDA", "BIDU", "NKE", "AMD", "SNAP", "T", "MSFT", "HPQ", "KO"]
    
}
